--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,7 +12,7 @@ body {
 }
 
 .footer {
-  position: relative;
+  position: fixed;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
@@ -27,6 +27,7 @@ body {
 
 body > .container, body >  .container-fluid {
   padding: 60px 15px 0;
+  margin-bottom: 60px;
 }
 
 .container .text-muted {
